--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   firebase_storage: ^11.5.3
   flutter_riverpod: ^2.4.9
   latlng: ^1.0.0
+  google_maps_flutter: ^2.5.0
+  location: ^5.0.3
+  permission_handler: ^11.0.1
+  geocoding: ^2.1.1
 
 dev_dependencies:
   flutter_test:
