--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,18 +53,27 @@ dependencies:
   location: ^5.0.3
   permission_handler: ^11.0.1
   geocoding: ^2.1.1
+  url_launcher: ^6.2.2
+  geolocator: ^10.1.0
+  progress_bar: ^1.0.0
+  progress_dialog2: ^1.0.0
+  
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_launcher_icons: ^0.13.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/Blue ResQ_new.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
