--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^5.1.0
-  flutter_map: ^5.0.0
+  google_fonts: ^6.1.0
+  flutter_map: ^6.1.0
   latlong2: ^0.9.0
   firebase_core: ^2.24.0
   firebase_auth: ^4.15.0
@@ -55,6 +55,7 @@ dependencies:
   geocoding: ^2.1.1
   url_launcher: ^6.2.2
   geolocator: ^10.1.0
+  firebase_app_check: ^0.2.1+8
   
   
   
@@ -68,7 +69,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 flutter_icons:
   android: true
   ios: true
