--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
-  firebase_core: ^2.24.0
+  firebase_core: ^2.24.2
   firebase_auth: ^4.15.0
   sign_in_button: ^3.2.0
   google_sign_in: ^6.1.6
@@ -59,6 +59,8 @@ dependencies:
   
   flutter_polyline_points: ^2.0.0
   firebase_messaging: ^14.7.9
+  firebase_database: ^10.4.0
+  image_picker: ^1.0.7
   
   
   
