--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   firebase_database: ^10.4.0
   image_picker: ^1.0.7
   provider: ^6.1.1
+  flutter_local_notifications: ^16.3.2
   
   
   
